# android_touchProject

./: fileselector使用.docx
Touch/app/: CMakeLists.txt  build.gradle
Touch/app/src/main/: AndroidManifest.xml
Touch/app/src/main/java/: com_example_touch_HidrawManager.h
Touch/app/src/main/java/adapter/: MyFileAdapter.java  MyFragmentAdapter.java  MySaveFileAdapter.java  SignalAdapter.java  Signal_RecycleViewAdapter.java
Touch/app/src/main/java/dataInformation/: AppType.java  ArrayAndClassConversion.java  CalibrationCapture.java  CalibrationData.java  CalibrationSettings.java  CommandItem.java  FirewareFileHeader.java  FirewareHeader.java  FirewarePackage.java  FirewarePackageList.java  Hid_device_info.java  Mcu_info.java  SignalData.java  TouchTestData.java  Touch_device.java  Touch_fireware_info.java  Touch_info.java  Touch_package.java  Touch_string_type.java  Touch_test_standard.java  UntData.java
Touch/app/src/main/java/fragment_interface/: About_fragment_interface.java  Setting_fragment_interface.java  Signal_fragment_interface.java  Test_fragment_interface.java  Upgrade_fragment_interface.java
Touch/app/src/main/java/fragment_package/: About_fragment.java  Setting_fragment.java  Signal_fragment.java  Test_fragment.java  Update_fragment.java
Touch/app/src/main/jni/: HidrawManager.c  HidrawManager.h
Touch/app/src/main/res/drawable/: black_board_rect.xml  checked_circle_selected.xml  checked_rect_selected.xml  horizontal_progress_bar.xml  img_board_circle.xml  img_board_rect.xml  selected.xml  shallow_img_board_rect.xml  upgrade_spinner.xml
(+150 files in other folders)
